--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-*/.DS_Store
+*~
+./writing/extrabibs.bib
 *.RData
 */node_modules/
 *.bbl
@@ -17,11 +18,13 @@
 *_invoice.csv
 *.Rhistory
 *.DS_Store*
-*.DS_Store
 *catch_trials.csv
 *subject_information.csv
 *system.csv
 *trials.csv
 *mturk.csv
 *mturk/
+*.gitattributes
 *node_modules*
+*dump.rdb
+.Rproj.user
